--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -6,6 +6,8 @@ driver:
 provisioner:
   name: chef_zero
   always_update_cookbooks: true
+  client_rb:
+    chef_license: accept
 
 verifier:
   name: inspec
